# mininax

./: .gitignore  LICENSE.md  README.md  index.html  mininax.cabal  mininax.lkshf.lkshw  params.json
src/: Infer.hs  InferDec.hs  Main.hs  Parser.hs  Syntax.hs  macros.h
test/: case.mininax  cong.mininax  env.mininax  kpoly.mininax  leibniz.mininax  path.mininax  powl.mininax  test.mininax  vapp.mininax
