name: mininax
version: 0.1.0
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: /home/kyagrd/cscs/mininax/LICENSE.md
copyright: BSD
maintainer: Ki Yung Ahn
homepage: https://github.com/kyagrd/mininax
bug-reports: https://github.com/kyagrd/mininax/issues
synopsis: Minimal implementation of Nax
description: Minimal implementation of the Nax programming language without term indices and other features.
category: Language
author: Ki Yung Ahn
data-dir: ""
extra-source-files: /home/kyagrd/cscs/mininax/src/macros.h
                    /home/kyagrd/cscs/mininax/test/env.mininax
                    /home/kyagrd/cscs/mininax/test/path.mininax
                    /home/kyagrd/cscs/mininax/test/test.mininax
 
executable mininax
    build-depends: BNFC-meta >= 0.4.0.1 && < 0.5,
                   QuickCheck -any, RepLib >= 0.5.3 && < 0.6,
                   base >= 4.3 && < 5, containers -any, mtl -any,
                   optparse-applicative >= 0.9,
                   unbound >= 0.4.3 && < 0.5
    main-is: Main.hs
    buildable: True
    build-tools: cpphs -any
    hs-source-dirs: src
    other-modules: Syntax InferDec Infer Parser
    ghc-options: -Wall -O2 -cpp -pgmPcpphs -optP--cpp
    -- ghc-prof-options: -Wall -auto-all -caf-all -O2 -cpp -pgmPcpphs -optP--cpp
 
test-suite test-mininax
    build-depends: BNFC-meta >= 0.4.0.1, QuickCheck -any,
                   RepLib >= 0.5.3 && < 0.6,
                   base >= 4.3 && < 5, containers -any, mtl -any,
                   optparse-applicative >= 0.9,
                   unbound >= 0.4.2
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    build-tools: cpphs -any
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
    other-modules: Syntax InferDec Infer Parser
    ghc-options: -Wall -O2 -cpp -pgmPcpphs -optP--cpp
